Add capitals to project

--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
 	<body>
 		<h1>Country search engine</h1>
 		<input id="country-name" type="text" placeholder=" Type here" />
-		<button id="search">Search a country</button>		
+		<button id="search">Search</button>		
 		<h2>List of countries</h2>
 		<ul id="countries">
 		  <li>No data</li>
+		</ul>
+		<h2>Capital City</h2>
+		<ul id="capitals">
+			<li>No data</li>
 		</ul>
 		<script
 		  src="https://code.jquery.com/jquery-3.2.1.js"
