Update / new info

--- a/index.html
+++ b/index.html
@@ -13,13 +13,38 @@
 		<input id="country-name" type="text" placeholder=" Type here" />
 		<button id="search">Search</button>		
 		<h2>List of countries</h2>
-		<ul id="countries">
-		  <li>No data</li>
-		</ul>
-		<h2>Capital City</h2>
-		<ul id="capitals">
-			<li>No data</li>
-		</ul>
+		<div class="whole-table">
+			<div class="country">
+				<h2>Country</h3>
+				<ul id="countries">
+				  <li></li>
+				</ul>
+			</div>
+			<div class="capital">
+				<h2>Capital</h3>
+				<ul id="capitals">
+					<li></li>				
+				</ul>
+			</div>
+			<div class="population">
+				<h2>Population</h3>
+				<ul id="population">
+					<li></li>				
+				</ul>
+			</div>
+			<div class="language">
+				<h2>Language</h3>
+				<ul id="language">
+					<li></li>				
+				</ul>
+			</div>
+			<div class="land-area">
+				<h2>Land area</h3>
+				<ul id="land-area">
+					<li></li>				
+				</ul>
+			</div>
+		</div>	
 		<script
 		  src="https://code.jquery.com/jquery-3.2.1.js"
 		  integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
