--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 		<h1>Country search engine</h1>
 		<input id="country-name" type="text" placeholder=" Type here" />
 		<button id="search">Search</button>		
-		<h2>List of countries</h2>
+		<div class="info">
+			<h2>Info</h2>
+		</div>
 		<div class="whole-table">
 			<div class="country">
 				<h2>Country</h3>
